# AFingerprint

./: .gitignore  CMakeLists.txt  README.txt  VISUALIZATION.md  build.sh  convert_to_pcm.sh  generate_fingerprints.sh  generate_single_fingerprints.sh  generate_xcode.sh  match_fingerprints.sh  match_single_fingerprints.sh  run_visualizations.sh
media_file/: v_s_31.mov  v_s_32.mov  v_s_33.mov  v_s_34.mov  v_s_35.mov  v_s_36.mov  v_s_37.mov  v_s_38.mov  v_s_39.mov
src/: audio_debugger.cpp  catalog.cpp  catalog.h  icatalog.h  imatcher.h  main.cpp  matcher.cpp  matcher.h  media_item.h  signature_generator.cpp  signature_generator.h
src/audio/: pcm_format.h  pcm_reader.cpp  pcm_reader.h
src/config/: iperformance_config.h  performance_config.cpp  performance_config.h  performance_config_factory.cpp  performance_config_factory.h
src/fft/: fft_accelerate.h  fft_mkl.cpp
src/interface/: afp_interface.cpp  afp_interface.h
src/libafp/: CMakeLists.txt
src/libafp/audio/: pcm_reader.cpp  pcm_reader.h
src/libafp/base/: channel_array.h  fft_result.h  frame.h  peek.h  ring_buffer.cpp  ring_buffer.h  scored_triple_frame_combination.h  visualization_config.h
src/libafp/catalog/: catalog.cpp  catalog.h
src/libafp/config/: performance_config.cpp  performance_config.h  performance_config_factory.cpp
src/libafp/debugger/: audio_debugger.cpp  audio_debugger.h  visualization.cpp  visualization.h
src/libafp/fft/: fft_accelerate.mm  fft_factory.cpp  fft_interface.h  fft_mkl.h  fft_ne10.h
src/libafp/include/afp/: afp_interface.h  icatalog.h  imatcher.h  iperformance_config.h  isignature_generator.h  media_item.h  pcm_format.h  performance_config_factory.h
src/libafp/interface/: afp_interface.cpp
src/libafp/matcher/: matcher.cpp  matcher.h
src/libafp/signature/: hash_computer.cpp  hash_computer.h  long_frame_builder.cpp  long_frame_builder.h  peek_detector.cpp  peek_detector.h  signature_generator.cpp  signature_generator.h  signature_matcher.cpp  signature_matcher.h
src/libafp/signature_generation_pipeline/: signature_generation_pipeline.cpp  signature_generation_pipeline.h  signature_generation_pipeline_ctx.h
src/libafp/signature_generation_pipeline/peak_detection/: frequency_band_manager.cpp  frequency_band_manager.h  peak_extractor.cpp  peak_extractor.h
src/libafp/signature_generation_pipeline/phase/: channel_split_phase.cpp  channel_split_phase.h  emphasis_phase.cpp  emphasis_phase.h  fft_phase.cpp  fft_phase.h  hash_computation_phase.cpp  hash_computation_phase.h  long_frame_building_phase.cpp  long_frame_building_phase.h  peak_detection_phase.cpp  peak_detection_phase.h
src/signature/: isignature_generator.h  signature_generator.cpp  signature_generator.h  signature_matcher.cpp  signature_matcher.h
src/visualization/: README.md  audio_player.py  config.py  plot_utils.py  plotting.py  plotting_helpers.py  ui_components.py  visualize_fingerprints.py
test_pcm/: Maniac.pcm  Savage_2.pcm  Savage_3.pcm  Savage_4.pcm  Savage_5.pcm  Savage_6.pcm  Savage_7.pcm  ally_slain.pcm  ally_slain_2.pcm  ally_slain_3.pcm  ally_slain_4.pcm  ban_hero.pcm  been_slain.pcm  bg_music.pcm  conneting.pcm  count_down.pcm  count_down_2.pcm  counting.pcm  defeat.pcm  defeat_2.pcm  defeat_3.pcm  defeat_4.pcm  destory_term.pcm  destory_term_2.pcm  destory_tur.pcm  double_kill.pcm  double_kill_2.pcm  emote_voic.pcm  enemy_picking.pcm  enermy_dominating.pcm  enermy_slain_2.pcm  enermy_slain_5.pcm  enerny_slain.pcm  fight_and_double_kill.pcm  fight_and_tlaking.pcm  fighting.pcm  fighting_2.pcm  fighting_3.pcm  fighting_4.pcm  fighting_5.pcm  (+171 more)
train_pcm/: v_s_2.pcm  v_s_3.pcm  v_s_4.pcm  v_s_5.pcm  v_s_6.pcm  v_s_7.pcm  v_s_8.pcm
